# 8chuk

./: 8chuk.c  8joy.c  8joy.h  CMakeLists.txt  README.md  basic_io.c  basic_io.h  keymap.c  keymap.h  main.c  nunchuk.c  nunchuk.h  ring_buffer.c  ring_buffer.h  usb_stuff.c  usb_stuff.h
